--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "^3.1.1",
+    "yeoman-generator": "5.8.0",
     "chalk": "^2.1.0",
     "yosay": "^2.0.2"
   },
