chore: refactor utils to use prettier and standard

--- a/package.json
+++ b/package.json
@@ -17,62 +17,40 @@
     "github-actions"
   ],
   "devDependencies": {
-    "yeoman-test": "1.7.0",
+    "jest": "26.1.0",
     "yeoman-assert": "3.1.1",
-    "eslint": "6.6.0",
-    "prettier": "1.19.1",
-    "husky": "3.0.9",
-    "lint-staged": "9.4.3",
-    "eslint-config-prettier": "6.6.0",
-    "eslint-plugin-prettier": "3.1.1",
-    "eslint-config-xo": "0.27.2",
-    "jest": "26.1.0"
+    "prettier-standard": "16.4.1",
+    "standard": "17.0.0",
+    "yeoman-test": "1.7.0"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ],
+    "ignore": [
+      "coverage/**",
+      "generators/app/templates/**"
+    ]
   },
   "engines": {
     "npm": ">= 14.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "3.1.1",
     "chalk": "2.1.0",
+    "yeoman-generator": "3.1.1",
     "yosay": "2.0.2"
   },
   "jest": {
     "testEnvironment": "node"
   },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ],
-    "*.json": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "eslintConfig": {
-    "extends": [
-      "xo",
-      "prettier"
-    ],
-    "env": {
-      "jest": true,
-      "node": true
-    },
-    "rules": {
-      "prettier/prettier": "error"
-    },
-    "plugins": [
-      "prettier"
-    ]
-  },
   "scripts": {
-    "pretest": "eslint .",
-    "test": "jest"
+    "format:fix": "prettier-standard --format",
+    "format": "prettier-standard --check",
+    "lint": "standard",
+    "lint:fix": "standard --fix",
+    "test": "jest --detectOpenHandles --forceExit  --verbose",
+    "test:coverage": "jest --detectOpenHandles --forceExit --verbose --coverage",
+    "test:watch": "jest --detectOpenHandles --forceExit --verbose --watchAll"
   },
   "repository": "https://github.com/UlisesGascon/generator-github-action-for-marketplace",
   "license": "MIT"
