--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "chalk": "2.1.0",
+    "slugify": "1.6.5",
     "yeoman-generator": "3.1.1",
     "yosay": "2.0.2"
   },
