--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "format": "prettier-standard --check",
     "lint": "standard",
     "lint:fix": "standard --fix",
-    "test": "jest --detectOpenHandles --forceExit  --verbose ./__tests__",
-    "test:coverage": "jest --detectOpenHandles --forceExit --verbose --coverage ./__tests__",
-    "test:watch": "jest --detectOpenHandles --forceExit --verbose --watchAll ./__tests__"
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit  --verbose ./__tests__",
+    "test:coverage": "NODE_ENV=test jest --detectOpenHandles --forceExit --verbose --coverage ./__tests__",
+    "test:watch": "NODE_ENV=test jest --detectOpenHandles --forceExit --verbose --watchAll ./__tests__"
   },
   "repository": "https://github.com/UlisesGascon/generator-github-action-for-marketplace",
   "license": "MIT"
