--- a/generators/app/templates/js-workflows/main.yml
+++ b/generators/app/templates/js-workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: 📦 Install dependencies
       run: npm ci
 
-    - name: 🚨 Lint
+    - name: 🔍 Lint
       run: npm run lint
     
     - name: 🪄 format
