--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -26,5 +26,7 @@ jobs:
         run: npm ci
       - name: 🔍 lint
         run: npm lint
+      - name: 🪄 format
+        run: npm format
       - name: 🧪 Run tests
         run: npm run test
