--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,8 +25,8 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
       - name: 🔍 lint
-        run: npm lint
+        run: npm run lint
       - name: 🪄 format
-        run: npm format
+        run: npm run format
       - name: 🧪 Run tests
         run: npm run test
