--- a/.github/workflows/publish_in_npm.yml
+++ b/.github/workflows/publish_in_npm.yml
@@ -27,9 +27,9 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
       - name: 🔍 lint
-        run: npm lint
+        run: npm run lint
       - name: 🪄 format
-        run: npm format
+        run: npm run format
       - name: 🧪 Run tests
         run: npm run test
 
